[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/presets/game/emitters/moving_enemy_emitter/moving_enemy_emitter.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="moving_enemy_emitter" type="Node2D"]
script = ExtResource( 1 )

[node name="skin" type="Sprite" parent="."]
position = Vector2( -2.07788, -114.414 )
scale = Vector2( 3.06207, 4.57544 )
texture = ExtResource( 2 )

[node name="spawn_point" type="Position2D" parent="."]
position = Vector2( 0, -101.67 )

[node name="enemies" type="Node" parent="."]

[node name="emitter_timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true
[connection signal="timeout" from="emitter_timer" to="." method="_on_emitter_timer_timeout"]
